# whispy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_whispy.py
configs/: 200hz_staircase_3_afc.yml  abx.yml  attributes.yml  config copy.yml  design.yml  drag_and_drop_mushra.yml  mushra_like_2d.yml  n_afc.yml  participant_id.yml  questionnaire.yml  questionnaire_consent.yml  questionnaire_general.yml  scale_testing.yml  staircase_n_afc.yml  stimuli.yml  stimuli_sounddevice.yml  thanks.yml  welcome.yml
configs/demo_configs/: abx_demo.yml  scale_testing_demo.yml  (+3 more)
docs/: USER_MANUAL.md  architecture.mmd
examples/: abx.ipynb  building_block_abx.ipynb  building_block_consent.ipynb  building_block_drag_and_drop_mushra.ipynb  building_block_questionnaire.ipynb  building_block_scale_testing.ipynb  building_block_staircase_n_afc.ipynb  building_block_welcome_and_thanks.ipynb  demo_200hz_staircase_3_afc.ipynb  drag_and_drop_mushra.ipynb  experiment_mushra_lile_2d.ipynb  full_experiment_abx.ipynb  full_experiment_audience_demo.ipynb  full_experiment_drag_and_drop_mushra.ipynb  full_experiment_scale_testing.ipynb  full_experiment_staircase_n_afc.ipynb  n_afc.ipynb  questionnaire.ipynb  run_n_afc.py  staircase_n_afc.ipynb  test.ipynb
results/: Experiment 1.csv
stimuli/: generate_example_stimli.py
stimuli_staircase/: generate_staircase_stimuli.py
tests/: conftest.py  test_experiment_host.py  test_markdown_formatting.py  test_playback_stop.py  test_plotting.py  test_results.py  test_staircase.py
whispy/: __init__.py  experiment_scheduler.py  staircase.py
(+39 files in other folders)
